# tls-decryptor

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE-MIT  README.md
src/: decrypter.rs  error.rs  key_derivation.rs  lib.rs  types.rs
src/cipher/: mod.rs  registry.rs  trait_def.rs
src/cipher/suites/: aead_common.rs  mod.rs  tls13_aes_128_gcm_sha256.rs  tls13_aes_256_gcm_sha384.rs  tls13_chacha20_poly1305_sha256.rs  tls_ecdhe_rsa_with_chacha20_poly1305_sha256.rs  tls_rsa_with_aes_128_gcm_sha256.rs  tls_rsa_with_aes_256_gcm_sha384.rs
src/key_derivation/: mod.rs  tls12.rs  tls13.rs
src/util/: ecdhe.rs  mod.rs  tls12.rs  tls13.rs
tests/: cipher_integration.rs  key_derivation_integration.rs  util_integration.rs
tests/cipher/: generate_test_vectors.py  mod.rs  test_vectors.json  tls12_cipher_tests.rs  tls13_cipher_tests.rs
tests/key_derivation/: generate_tls12_vectors.py  generate_tls13_vectors.py  mod.rs  tls12_key_derivation_tests.rs  tls12_test_vectors.json  tls13_key_derivation_tests.rs  tls13_test_vectors.json
tests/testdata/: generate_key_derivation_test_data.py  generate_tls_decrypt_test_data.py  key_derivation_test_cases_real.json  tls_decrypt_test_cases.json
tests/util/: ecdhe_tests.rs  generate_test_vectors.py  mod.rs  test_vectors.json  tls12_tests.rs  tls13_tests.rs
