[package]
name = "tls-decrypt"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
aes-gcm = "0.10.3"
chacha20poly1305 = "0.10.1"
hkdf = "0.12.4"
hmac = "0.12.1"
once_cell = "1.21.4"
p256 = "0.13.2"
p384 = "0.13.1"
pem = "3.0.6"
rsa = "0.9.10"
rustls = "0.23.37"
sha2 = "0.10.9"
thiserror = "2.0.18"

[dev-dependencies]
hex-literal = "1.1.0"
